--- a/wp-content/themes/html5blank-stable/style.css
+++ b/wp-content/themes/html5blank-stable/style.css
@@ -96,6 +96,16 @@ b, strong {
   box-shadow: 0px 1px 20px rgba(0, 0, 0, 0.1215686275);
 }
 
+.gradient .elementor-button-link {
+  transition: all 0.5s ease;
+  background-image: linear-gradient(to right, #32444B 0%, #638796 51%, #638796 100%);
+  flex: 1 1 auto;
+  background-size: 200% auto;
+}
+.gradient .elementor-button-link:hover {
+  background-position: 50% center;
+}
+
 .trabalho-icone {
   display: block;
   width: 3.6458333333vw;
