--- a/wp-content/themes/html5blank-stable/style.scss
+++ b/wp-content/themes/html5blank-stable/style.scss
@@ -105,6 +105,20 @@ b, strong{
 	box-shadow: 0px 1px 20px #0000001F;
 }
 
+.gradient{
+	.elementor-button-link{
+		transition: all 0.5s ease; 
+		background-image: linear-gradient(to right, #32444B 0%, #638796 51%, #638796 100%);
+		flex: 1 1 auto;
+		background-size: 200% auto;
+		&:hover{
+			background-position: 50% center;
+		} 
+	}
+}
+
+
+
 .trabalho-icone{
 	display: block;
 	width: vw(70);
