--- a/wp-content/themes/html5blank-stable/style.css
+++ b/wp-content/themes/html5blank-stable/style.css
@@ -96,6 +96,25 @@ b, strong {
   margin-right: 5px;
 }
 
+#menu-pc {
+  transition: all 0.5s ease;
+  top: 0;
+  width: 100vw;
+}
+#menu-pc ul li a {
+  transition: all 0.5s ease;
+}
+#menu-pc ul li a .sub-arrow {
+  background-image: url("http://localhost/santiago/wp-content/uploads/2022/06/Icon-ionic-ios-arrow-dropdown.svg");
+  background-repeat: no-repeat;
+  background-position: center;
+  width: 14px;
+  height: 14px;
+}
+#menu-pc ul li a .sub-arrow i {
+  display: none;
+}
+
 .sombra {
   box-shadow: 0px 1px 20px rgba(0, 0, 0, 0.1215686275);
 }
