--- a/wp-content/themes/html5blank-stable/style.scss
+++ b/wp-content/themes/html5blank-stable/style.scss
@@ -105,6 +105,29 @@ b, strong{
 	}
 }
 
+#menu-pc{
+	transition: all 0.5s ease;
+	top: 0;
+	width: 100vw;
+	ul{
+		li{
+			a{
+				transition: all 0.5s ease;
+				.sub-arrow{
+					background-image: url("http://localhost/santiago/wp-content/uploads/2022/06/Icon-ionic-ios-arrow-dropdown.svg");
+					background-repeat: no-repeat;
+					background-position: center;
+					width: 14px;
+					height: 14px;
+					i{
+						display: none;
+					}
+				}
+			}
+		}
+	}
+}
+
 .sombra{
 	box-shadow: 0px 1px 20px #0000001F;
 }
