--- a/wp-content/plugins/depoimentos-custom/css/custom-depoimentos.scss
+++ b/wp-content/plugins/depoimentos-custom/css/custom-depoimentos.scss
@@ -107,6 +107,7 @@
         z-index: 9;
         border: unset;
         background-color: transparent;
+        padding: 0;
         &:hover{
             background-position: 50% center;
         }
