--- a/wp-content/themes/html5blank-stable/style.css
+++ b/wp-content/themes/html5blank-stable/style.css
@@ -10,6 +10,22 @@
 	License: MIT
 	License URI: https://opensource.org/licenses/mit-license.php
 */
+@-webkit-keyframes fade {
+  0%, 100% {
+    opacity: 0;
+  }
+  50% {
+    opacity: 1;
+  }
+}
+@keyframes fade {
+  0%, 100% {
+    opacity: 0;
+  }
+  50% {
+    opacity: 1;
+  }
+}
 html, body, div, span, applet, object, iframe,
 h1, h2, h3, h4, h5, h6, p, blockquote, pre,
 a, abbr, acronym, address, big, cite, code,
@@ -235,6 +251,186 @@ b, strong {
   border-top: 0;
   box-shadow: 0px 3px 10px #191F29;
   margin-bottom: 10px;
+}
+
+.sessao-tecnicas {
+  display: flex;
+  align-items: center;
+  width: 100%;
+  position: relative;
+  font-family: "Montserrat", Sans-serif;
+  min-height: 645px;
+}
+.sessao-tecnicas .sessao-tecnicas-menu {
+  display: block;
+  width: 398px;
+}
+.sessao-tecnicas .sessao-tecnicas-menu .sessao-tecnicas-menu-item {
+  display: inline-flex;
+  align-items: center;
+  justify-content: center;
+  width: 100%;
+  height: 115px;
+  padding: 20px 41px 20px 25px;
+  border-radius: 20px;
+  background-color: transparent;
+  transition: all 0.5s ease;
+  position: relative;
+  cursor: pointer;
+  margin-bottom: 10px;
+}
+.sessao-tecnicas .sessao-tecnicas-menu .sessao-tecnicas-menu-item .sessao-tecnicas-menu-item-icone {
+  display: block;
+  width: 72px;
+  height: 72px;
+  background-color: rgba(112, 112, 112, 0.36);
+  padding: 15px;
+  border-radius: 100%;
+  transition: all 0.5s ease;
+  margin-right: 2.03125vw;
+}
+.sessao-tecnicas .sessao-tecnicas-menu .sessao-tecnicas-menu-item .sessao-tecnicas-menu-item-icone img {
+  display: block;
+  width: 100%;
+  height: 100%;
+  -o-object-fit: scale-down;
+     object-fit: scale-down;
+  -o-object-position: center;
+     object-position: center;
+}
+.sessao-tecnicas .sessao-tecnicas-menu .sessao-tecnicas-menu-item .sessao-tecnicas-menu-item-titulo {
+  display: block;
+  width: 191px;
+}
+.sessao-tecnicas .sessao-tecnicas-menu .sessao-tecnicas-menu-item .sessao-tecnicas-menu-item-titulo span {
+  font-size: 1.0416666667vw;
+  line-height: 1.3em;
+  color: #707070;
+  font-weight: 400;
+}
+.sessao-tecnicas .sessao-tecnicas-menu .sessao-tecnicas-menu-item .sessao-tecnicas-menu-item-seta {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  width: 28px;
+  height: 28px;
+  position: absolute;
+  right: 13px;
+  top: 50%;
+  transform: translateY(-50%);
+  border-radius: 100%;
+  transition: all 0.5s ease;
+  flex: 1 1 auto;
+  background-size: 200% auto;
+  background-color: #B4B4B4;
+  padding: 0;
+}
+.sessao-tecnicas .sessao-tecnicas-menu .sessao-tecnicas-menu-item .sessao-tecnicas-menu-item-seta img {
+  width: 9px;
+  height: 9px;
+  transition: all 0.5s ease;
+}
+.sessao-tecnicas .sessao-tecnicas-menu .sessao-tecnicas-menu-item .sessao-tecnicas-menu-item-seta:hover {
+  background-position: 50% center;
+}
+.sessao-tecnicas .sessao-tecnicas-menu .sessao-tecnicas-menu-item .sessao-tecnicas-menu-item-seta:focus, .sessao-tecnicas .sessao-tecnicas-menu .sessao-tecnicas-menu-item .sessao-tecnicas-menu-item-seta:active {
+  background-position: 100% center;
+}
+.sessao-tecnicas .sessao-tecnicas-menu .sessao-tecnicas-menu-item.sessao-ativa, .sessao-tecnicas .sessao-tecnicas-menu .sessao-tecnicas-menu-item:hover {
+  background-color: #fff;
+}
+.sessao-tecnicas .sessao-tecnicas-menu .sessao-tecnicas-menu-item.sessao-ativa .sessao-tecnicas-menu-item-icone, .sessao-tecnicas .sessao-tecnicas-menu .sessao-tecnicas-menu-item:hover .sessao-tecnicas-menu-item-icone {
+  background-color: #638796;
+  box-shadow: 0px 3px 6px rgba(0, 0, 0, 0.16);
+}
+.sessao-tecnicas .sessao-tecnicas-menu .sessao-tecnicas-menu-item.sessao-ativa .sessao-tecnicas-menu-item-titulo span, .sessao-tecnicas .sessao-tecnicas-menu .sessao-tecnicas-menu-item:hover .sessao-tecnicas-menu-item-titulo span {
+  font-weight: bold;
+}
+.sessao-tecnicas .sessao-tecnicas-menu .sessao-tecnicas-menu-item.sessao-ativa .sessao-tecnicas-menu-item-seta, .sessao-tecnicas .sessao-tecnicas-menu .sessao-tecnicas-menu-item:hover .sessao-tecnicas-menu-item-seta {
+  right: 10px;
+  background-image: linear-gradient(to right, #32444B 0%, #638796 51%, #638796 100%);
+}
+.sessao-tecnicas .sessao-tecnicas-menu .sessao-tecnicas-menu-item.sessao-ativa .sessao-tecnicas-menu-item-seta img, .sessao-tecnicas .sessao-tecnicas-menu .sessao-tecnicas-menu-item:hover .sessao-tecnicas-menu-item-seta img {
+  transform: scale(-1);
+}
+.sessao-tecnicas .sessao-tecnicas-menu .sessao-tecnicas-menu-item:last-child {
+  margin-bottom: 0;
+}
+.sessao-tecnicas .sessao-tecnicas-item {
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  justify-content: center;
+  opacity: 0;
+  visibility: hidden;
+  transition: all 0.5s ease;
+  z-index: -1;
+}
+.sessao-tecnicas .sessao-tecnicas-item .sessao-tecnicas-item-conteudo {
+  display: block;
+  width: 555px;
+  height: auto;
+  padding-left: 90px;
+  position: absolute;
+  top: 50%;
+  transform: translateY(-50%);
+}
+.sessao-tecnicas .sessao-tecnicas-item .sessao-tecnicas-item-conteudo .sessao-tecnicas-item-titulo h4 {
+  display: block;
+  width: 100%;
+  font-size: 2.0833333333vw;
+  line-height: 1.225em;
+  color: #707070;
+  margin-bottom: 16px;
+  text-align: left;
+  font-weight: bold;
+}
+.sessao-tecnicas .sessao-tecnicas-item .sessao-tecnicas-item-conteudo .sessao-tecnicas-item-texto p {
+  font-size: 1.0416666667vw;
+  line-height: 1.3em;
+  color: #707070;
+  margin-bottom: 24px;
+  text-align: left;
+  font-weight: 400;
+}
+.sessao-tecnicas .sessao-tecnicas-item .sessao-tecnicas-item-conteudo a {
+  display: block;
+  width: -webkit-max-content;
+  width: -moz-max-content;
+  width: max-content;
+  max-width: 100%;
+  font-size: 1.25vw;
+  font-weight: bold;
+  background-color: #638796;
+  border-radius: 50px 50px 50px 50px;
+  box-shadow: 0px 3px 6px 0px rgba(0, 56, 58, 0.3607843137);
+  padding: 19px 45px 19px 45px;
+  background-image: linear-gradient(259deg, #638796 50%, #32444B 85%);
+  color: #fff;
+  transition: all 0.5s ease;
+  flex: 1 1 auto;
+  background-size: 200% auto;
+}
+.sessao-tecnicas .sessao-tecnicas-item .sessao-tecnicas-item-conteudo a:hover {
+  background-position: 50% center;
+}
+.sessao-tecnicas .sessao-tecnicas-item .sessao-tecnicas-item-imagem {
+  position: absolute;
+  right: -15.625vw;
+  bottom: -9px;
+  mix-blend-mode: multiply;
+  height: calc(100% - 3px);
+}
+.sessao-tecnicas .sessao-tecnicas-item .sessao-tecnicas-item-imagem img {
+  width: 925px;
+  mix-blend-mode: multiply;
+  height: calc(100% - 10px);
+}
+.sessao-tecnicas .sessao-tecnicas-item.sessao-ativa {
+  height: 100%;
+  opacity: 1;
+  visibility: visible;
 }
 
 @media only screen and (max-width: 1025px) {
