--- a/wp-content/themes/html5blank-stable/style.scss
+++ b/wp-content/themes/html5blank-stable/style.scss
@@ -25,6 +25,12 @@
     @return ($ln_em / $ft) * 1em;
 }
 
+@keyframes fade {
+	0%,100% { opacity: 0 }
+	50% { opacity: 1 }
+  }
+
+
 html, body, div, span, applet, object, iframe,
 h1, h2, h3, h4, h5, h6, p, blockquote, pre,
 a, abbr, acronym, address, big, cite, code,
@@ -262,6 +268,195 @@ b, strong{
 		margin-bottom: 10px;
 	}
 
+}
+
+.sessao-tecnicas{
+	display: flex;
+	align-items: center;
+	width: 100%;
+	position: relative;
+	font-family: "Montserrat", Sans-serif;
+	min-height: 645px;
+	.sessao-tecnicas-menu{
+		display: block;
+		width: 398px;
+		.sessao-tecnicas-menu-item{
+			display: inline-flex;
+			align-items: center;
+			justify-content: center;
+			width: 100%;
+			height: 115px;
+			padding: 20px 41px 20px 25px;
+			border-radius: 20px;
+			background-color: transparent;
+			transition: all 0.5s ease;
+			position: relative;
+			cursor: pointer;
+			margin-bottom: 10px;
+			.sessao-tecnicas-menu-item-icone{
+				display: block;
+				width: 72px;
+				height: 72px;
+				background-color: rgba(#707070, 0.36);
+				padding: 15px;
+				border-radius: 100%;
+				transition: all 0.5s ease;
+				margin-right: vw(39);
+				img{
+					display: block;
+					width: 100%;
+					height: 100%;
+					object-fit: scale-down;
+					object-position: center;
+				}
+			}
+			.sessao-tecnicas-menu-item-titulo{
+				display: block;
+				width: 191px;
+				span{
+					font-size: vw(20);
+					line-height: em(20, 26);
+					color: #707070;
+					font-weight: 400;
+				}
+			}
+			.sessao-tecnicas-menu-item-seta{
+				display: flex;
+				flex-direction: column;
+				align-items: center;
+				justify-content: center;
+				width: 28px;
+				height: 28px;
+				position: absolute;
+				right: 13px;
+				top: 50%;
+				transform: translateY(-50%);
+				border-radius: 100%;
+				transition: all 0.5s ease; 
+				flex: 1 1 auto;
+				background-size: 200% auto;
+				background-color: #B4B4B4;
+				img{
+					width: 9px;
+					height: 9px;
+					transition: all 0.5s ease;
+				}
+				padding: 0;
+				&:hover{
+					background-position: 50% center;
+				}
+				&:focus, &:active{
+					background-position: 100% center;
+        		} 
+			}
+
+			&.sessao-ativa, &:hover{
+				background-color: #fff;
+				.sessao-tecnicas-menu-item-icone{
+					background-color: #638796;
+					box-shadow: 0px 3px 6px rgba(#000000, 0.16);
+				}
+				.sessao-tecnicas-menu-item-titulo{
+					span{
+						font-weight: bold;
+					}
+				}
+				.sessao-tecnicas-menu-item-seta{
+					right: 10px;
+					background-image: linear-gradient(to right, #32444B 0%, #638796 51%, #638796 100%);
+					img{
+						transform: scale(-1);
+					}
+				}
+			}
+			&:last-child{
+				margin-bottom: 0;
+			}
+		}
+	}
+	.sessao-tecnicas-item{
+		display: flex;
+		flex-direction: column;
+		align-items: flex-start;
+		justify-content: center;
+		opacity: 0;
+		visibility: hidden;
+		transition: all 0.5s ease;
+		z-index: -1;
+		.sessao-tecnicas-item-conteudo{
+			display: block;
+			width: 555px;
+			height: auto;
+			padding-left: 90px;
+			position: absolute;
+			top: 50%;
+			transform: translateY(-50%);
+			.sessao-tecnicas-item-titulo{
+				h4{
+					display: block;
+					width: 100%;
+					font-size: vw(40);
+					line-height: em(40, 49);
+					color: #707070;
+					margin-bottom: 16px;
+					text-align: left;
+					font-weight: bold;
+				}
+			}
+			.sessao-tecnicas-item-texto{
+				p{
+					font-size: vw(20);
+					line-height: em(20, 26);
+					color: #707070;
+					margin-bottom: 24px;
+					text-align: left;
+					font-weight: 400;
+				}
+			}
+			a{
+				display: block;
+				width: max-content;
+				max-width: 100%;
+				font-size: vw(24);
+				font-weight: bold;
+				background-color: #638796;
+				border-radius: 50px 50px 50px 50px;
+				box-shadow: 0px 3px 6px 0px rgba(0, 56.00000000000001, 58, 0.3607843137254902);
+				padding: 19px 45px 19px 45px;
+				background-image: linear-gradient(259deg, #638796 50%, #32444B 85%);
+				color: #fff;
+				transition: all 0.5s ease;
+				flex: 1 1 auto;
+				background-size: 200% auto;
+				&:hover{
+					background-position: 50% center;
+				}
+			}
+
+			
+		}
+
+		.sessao-tecnicas-item-imagem{
+			position: absolute;
+			right: vw(-300);
+			bottom: -9px;
+			mix-blend-mode: multiply;
+			height: calc(100% - 3px);
+			img{
+				width: 925px;
+				mix-blend-mode: multiply;
+				height: calc(100% - 10px);
+			}
+		}
+
+		&.sessao-ativa{
+			height: 100%;
+			opacity: 1;
+			visibility: visible;
+			
+		}
+		
+	}
 }
 
 @media only screen and (max-width: 1025px) {
